--- a/source/spydersoft.Identity/Views/Home/About.cshtml
+++ b/source/spydersoft.Identity/Views/Home/About.cshtml
@@ -1,6 +1,44 @@
 ﻿@using Microsoft.AspNetCore.Authentication;
+@using spydersoft.Identity.Models.Home;
+@model AboutDataViewModel;
 
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<h3>Open Source Libraries</h3>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card card-accent-info">
+            <div class="card-header">
+                <strong>
+                    <i class="icon-envelope"></i> NPM Libraries
+                </strong>
+            </div>
+            <div class="card-body">
+                <div class="list-group">
+                    @foreach (var library in Model.UiLibraries)
+                    {
+                        <a href="@library.Url" target="_blank" class="list-group-item list-group-item-action">@library.Name</a>
+                    }
+
+                </div>
+            </div>
+        </div>
+        <div class="card card-accent-info">
+            <div class="card-header">
+                <strong>
+                    <i class="icon-envelope"></i> Net Core Libraries
+                </strong>
+            </div>
+            <div class="card-body">
+                <div class="list-group">
+                    @foreach (var library in Model.NetLibraries)
+                    {
+                        <a href="@library.Url" target="_blank" class="list-group-item list-group-item-action">@library.Name</a>
+                    }
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
