--- a/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -29,5 +29,23 @@
                 </tr>
             }
         </table>
+        <form asp-action="AddStandard">
+            <div class="form-group row">
+                <label asp-for="SelectedAvailableResource" class="col-sm-4 col-form-label"></label>
+                <div class="col-sm-6">
+                    <select asp-for="SelectedAvailableResource" class="form-control">
+                        @foreach (var standardResource in Model.AvailableStandardResources)
+                        {
+                            <option value="@standardResource.Name">@standardResource.DisplayName</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <input type="submit" value="Add Standard" class="btn btn-primary" />
+                </div>
+            </div>
+        </form>
     </div>
 </div>
