--- a/source/spydersoft.Identity/Views/Shared/Error.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/Error.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Hosting
+@using Microsoft.Extensions.Hosting
 @using spydersoft.Identity.Models
 @model ErrorViewModel
-@inject IHostingEnvironment host
+@inject IWebHostEnvironment host
 
 @{
     var error = Model?.Error?.Error;
