--- a/source/spydersoft.Identity/Views/Consent/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/Index.cshtml
@@ -41,7 +41,7 @@
                     </div>
                 }
 
-                @if (Model.ResourceScopes.Any())
+                @if (Model.ApiScopes.Any())
                 {
                     <div class="card">
                         <div class="card-header">
@@ -49,7 +49,7 @@
                         </div>
                         <div class="card-body">
                             <div class="list-group">
-                                @foreach (var scope in Model.ResourceScopes)
+                                @foreach (var scope in Model.ApiScopes)
                                 {
                                     @await Html.PartialAsync("_ScopeListItem", scope)
                                 }
