--- a/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
@@ -17,8 +17,8 @@
             <input class="form-check-input"
                    type="checkbox"
                    name="ScopesConsented"
-                   id="scopes_@Model.Name"
-                   value="@Model.Name"
+                   id="scopes_@Model.Value"
+                   value="@Model.Value"
                    checked="@Model.Checked"
                    disabled="@Model.Required"/>
         </div>
@@ -33,7 +33,7 @@
     {
         <input type="hidden"
                name="ScopesConsented"
-               value="@Model.Name" />
+               value="@Model.Value" />
     }
 
 
